Short slider animation, fix double margin on smaller screens

--- a/client/marketing/overview/knowledge-base/style.scss
+++ b/client/marketing/overview/knowledge-base/style.scss
@@ -21,7 +21,9 @@
 	width: 100%;
 
 	@include breakpoint( '<960px' ) {
-		margin-bottom: 24px;
+		&:not(:last-child) {
+			margin-bottom: 16px;
+		}
 	}
 
 	> img {
